# file_info

./: Cargo.toml  dist-workspace.toml
file_info/: Cargo.toml
file_info/src/: main.rs
